--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
   <div>
 
-    <img src="https://zendemo.github.io/person.jpeg" />
+    <img src="https://betterdeveloperandclimberthantrong.github.io/profile%20pic.jpg" />
     <h1>Antonin Jirou-Najou</h1>
     <a href="https://www.linkedin.com/in/antoninjirounajou/">LinkedIn
       <a href="https://www.instagram.com/antnjrnj/">Instagram
